--- a/package.json
+++ b/package.json
@@ -13,18 +13,26 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.18",
+    "@mui/material": "^7.0.1",
     "@supabase/supabase-js": "^2.39.7",
     "date-fns": "^3.3.1",
+    "decimal.js": "^10.5.0",
+    "dexie": "^4.0.11",
     "framer-motion": "^11.0.8",
     "gh-pages": "^6.3.0",
     "jspdf": "^2.5.1",
+    "localforage": "^1.10.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
+    "sql.js": "^1.13.0",
+    "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
@@ -32,6 +40,8 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "@types/sql.js": "^1.4.9",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -43,7 +53,8 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^5.1.4"
   }
