--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.18",
     "@mui/material": "^7.0.1",
-    "@supabase/supabase-js": "^2.39.7",
-    "date-fns": "^3.3.1",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@supabase/supabase-js": "^2.49.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "decimal.js": "^10.5.0",
     "dexie": "^4.0.11",
     "framer-motion": "^11.0.8",
@@ -23,11 +30,14 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-day-picker": "^9.6.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
     "sql.js": "^1.13.0",
+    "tailwind-merge": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
