--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.344.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-day-picker": "^9.6.4",
     "react-dom": "^18.3.1",
