--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.18",
+    "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
@@ -20,6 +22,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.49.4",
+    "antd": "^5.24.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -34,6 +37,7 @@
     "react-day-picker": "^9.6.4",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
     "sql.js": "^1.13.0",
