--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^1.7.18",
@@ -21,6 +22,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.49.4",
     "antd": "^5.24.6",
     "class-variance-authority": "^0.7.1",
@@ -28,7 +30,8 @@
     "date-fns": "^3.6.0",
     "decimal.js": "^10.5.0",
     "dexie": "^4.0.11",
-    "framer-motion": "^11.0.8",
+    "dotenv": "^16.4.7",
+    "framer-motion": "^11.18.2",
     "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.344.0",
@@ -38,6 +41,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
     "sql.js": "^1.13.0",
